--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "swiper": "^8.4.4",
     "vue": "^3.2.13",
     "vue-plugin-load-script": "^2.1.1",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
