--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.1",
+    "swiper": "^8.4.5",
     "vue": "^3.2.13",
     "vue-plugin-load-script": "^2.1.1",
     "vue-router": "^4.0.13",
